import { Trans } from "@lingui/react/macro";
import { Card } from "heroui-native";
import { View } from "react-native";

import { Container } from "@/shared/ui/container";

export default function TabTwo() {
  return (
    <Container className="p-6">
      <View className="flex-1 justify-center items-center">
        <Card variant="secondary" className="p-8 items-center">
          <Card.Title className="text-3xl mb-2">
            <Trans>Tab Two</Trans>
          </Card.Title>
        </Card>
      </View>
    </Container>
  );
}
